# pydantic-ai-agent

./: .env.example  .gitignore  .post-claude-edit-config.yaml  .pre-commit-config.yaml  ADAPTER_PATTERN.md  CLAUDE.md  Makefile  PROJECT_DOCS.md  Procfile  README.md  SLACK_LOCAL_DEV.md  WEBHOOK_LOCAL_DEV.md  alembic.ini  main.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: post-tool-use.py  session-start.sh
.github/workflows/: ci.yaml  python-lint.yml  weekly-readme-check.yml
alembic/: env.py
app/: __init__.py  config.py  main.py
app/adapters/: __init__.py  base.py  email.py  models.py  slack.py
app/api/: channel_adapters.py  conversations.py  tasks.py
app/database/: __init__.py  connection.py  models.py
app/models/: __init__.py  domain.py
app/runners/: __init__.py  base.py  claude_sdk.py  mock.py  models.py  pydantic_ai.py
app/services/: __init__.py  agent_executor.py  channel_adapter_manager.py  conversation_manager.py  notification_service.py  task_manager.py
app/workers/: scheduler.py  task_worker.py
