[project]
name = "ai-agent-platform"
version = "0.1.0"
description = "AI Agent Platform supporting multiple interaction patterns with Pydantic AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.120.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic-ai>=0.0.14",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "apscheduler>=3.10.0",
    "arq>=0.26.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes (unused variables, imports, etc.)
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Function calls in argument defaults (FastAPI Depends pattern)
]
unfixable = [
    "F401",  # Unused imports - report but don't auto-remove
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[dependency-groups]
dev = [
    "pyyaml>=6.0.3",
    "ruff>=0.14.2",
    "ty>=0.0.1a24",
]
